[gd_scene load_steps=7 format=3 uid="uid://cokkri2jg0cfk"]

[ext_resource type="Script" path="res://game/playbook.gd" id="1_kolcx"]
[ext_resource type="Texture2D" uid="uid://cyexvvfl6ervy" path="res://art/game/plunger_icon.png" id="1_mkqa7"]
[ext_resource type="LabelSettings" uid="uid://bmt8337q2eie4" path="res://themes/default/paragraph_label_settings.tres" id="2_7nqg1"]
[ext_resource type="Texture2D" uid="uid://gob458i4oe0x" path="res://art/game/flipper.png" id="3_xlenw"]
[ext_resource type="Texture2D" uid="uid://5eh86sk4bsq1" path="res://art/game/tilt_symbol.png" id="4_lbtrl"]

[sub_resource type="LabelSettings" id="LabelSettings_rj0p8"]
font_size = 28
font_color = Color(0.984314, 0.74902, 0.141176, 1)

[node name="Playbook" type="PanelContainer"]
script = ExtResource("1_kolcx")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Automata Playbook"
label_settings = SubResource("LabelSettings_rj0p8")

[node name="GridContainer" type="GridContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/h_separation = 16
theme_override_constants/v_separation = 16
columns = 2

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
texture = ExtResource("1_mkqa7")

[node name="LabelPlungeDelay" type="Label" parent="MarginContainer/VBoxContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Plunge: after X seconds"
label_settings = ExtResource("2_7nqg1")

[node name="TextureRect2" type="TextureRect" parent="MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
texture = ExtResource("3_xlenw")

[node name="LabelLeftFlipperInterval" type="Label" parent="MarginContainer/VBoxContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Left flipper: every Y seconds"
label_settings = ExtResource("2_7nqg1")

[node name="TextureRect3" type="TextureRect" parent="MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
texture = ExtResource("3_xlenw")
flip_h = true

[node name="LabelRightFlipperInterval" type="Label" parent="MarginContainer/VBoxContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Right flipper: every Z seconds
"
label_settings = ExtResource("2_7nqg1")

[node name="TextureRect4" type="TextureRect" parent="MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
texture = ExtResource("4_lbtrl")
flip_h = true

[node name="LabelTiltTimings" type="Label" parent="MarginContainer/VBoxContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Tilt machine: never
"
label_settings = ExtResource("2_7nqg1")
